--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
       - 'ci-woes'
     tags:
       - 'v*.*.*'
+      - 'latest'
   pull_request:
     branches:
       - 'main'
@@ -57,6 +58,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          allow: network.host
           platforms: linux/amd64,linux/arm64/v8
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.spheal_meta.outputs.tags }}
