--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,5 +61,5 @@ jobs:
           allow: network.host
           platforms: linux/amd64,linux/arm64/v8
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.spheal_meta.outputs.tags }},latest
+          tags: ${{ steps.spheal_meta.outputs.tags }},ghcr.io/fortheusers/sealeo:latest
           labels: ${{ steps.spheal_meta.outputs.labels }}
