Squashed commit of the following:
commit 3ad9f0d9fda3e9475e9689c120f18a7b83ea7a73
Author: vgmoose <me@vgmoose.com>
Date:   Tue Aug 23 21:47:11 2022 -0400

    update readme

commit 8ec5ed4129d1a629e069f6cd941f857372341d5f
Author: vgmoose <me@vgmoose.com>
Date:   Tue Aug 23 21:30:16 2022 -0400

    ci: fix latest tag

commit a71f7ac64aeb8517ef8bffeb6ac54b7c7944f39a
Author: vgmoose <me@vgmoose.com>
Date:   Tue Aug 23 21:15:11 2022 -0400

    ci: add libcharon-extra

commit 3da7bc7c7d785b76ecc0d5ebd27c98a43dd7ff67
Author: vgmoose <me@vgmoose.com>
Date:   Tue Aug 23 20:07:11 2022 -0400

    tag as latest

commit c4e9b19d0bf92510a3f29637b7727e98ad93ea18
Author: vgmoose <me@vgmoose.com>
Date:   Tue Aug 23 19:31:12 2022 -0400

    install curl earlier

commit cc7f35cdb3dcc34716b03beddbd9c5d79dc3a25f
Author: vgmoose <me@vgmoose.com>
Date:   Tue Aug 23 19:08:43 2022 -0400

    ci: fix yml syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,14 @@
-name: Build
+name: Build container
 
 # Controls when the workflow will run
 on:
-  workflow_dispatch
   push:
     branches:
       - 'main'
+      - 'ci-woes'
     tags:
       - 'v*.*.*'
+      - 'latest'
   pull_request:
     branches:
       - 'main'
@@ -57,7 +58,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          allow: network.host
           platforms: linux/amd64,linux/arm64/v8
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.spheal_meta.outputs.tags }}
+          tags: ${{ steps.spheal_meta.outputs.tags }},ghcr.io/fortheusers/sealeo:latest
           labels: ${{ steps.spheal_meta.outputs.labels }}
