--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - 'main'
-      - 'ci-woes-2'
     tags:
       - 'v*.*.*'
       - 'latest'
@@ -59,6 +58,8 @@ jobs:
         with:
           context: .
           allow: network.host
+          build-args: |
+            VPN_INFO=${{ env.VPN_INFO }}
           platforms: linux/amd64,linux/arm64/v8
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.spheal_meta.outputs.tags }},ghcr.io/fortheusers/sealeo:latest
