use self hosted runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - 'main'
-      - 'ci-woes-3'
     tags:
       - 'v*.*.*'
       - 'latest'
@@ -19,7 +18,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       # Get the repository's code
       - name: Checkout
